syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sixwh.raft";
option java_outer_classname = "RaftProto";

option go_package = "raft";

package raft;

enum ServerRole {
    FOLLOWER = 0;
    CANDIDATE = 1;
    LEADER = 2;
}

message LogEntry {
    int32 term = 1;
    int32 index = 2;
    bytes data = 3;
}

message AppendEntriesParam {
    int32 term = 1;
    string leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    int32 leaderCommit = 6;
}

message AppendEntriesResult {
    int32 term = 1;
    bool success = 2;
}

message RequestVoteParam {
    int32 term = 1;
    string candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteResult {
    int32 term = 1;
    bool voteGranted = 2;
}

service ServerService {
    rpc appendEntries(AppendEntriesParam) returns (AppendEntriesResult);
    rpc requestVote(RequestVoteParam) returns (RequestVoteResult);
}